修改mathjax.css 引入方式

--- a/keditor.html
+++ b/keditor.html
@@ -153,22 +153,12 @@
                 "foreColor",
                 "backColor",
                 "custom"
-                //,
-                // "custom",
-                // {
-                //     name: "fontName",
-                //     items: [{
-                //         text: "Courier",
-                //         value: "Courier"
-                //     }, {
-                //         text: "Times New Roman",
-                //         value: "Times New Roman"
-                //     }, {
-                //         text: "Trebuchet MS",
-                //         value: "Trebuchet MS"
-                //     }]
-                // }
             ],
+            stylesheets: [
+                "styles/mathjax.css"
+            ]
+
+
             // change: function () {
             //     //    console.log(this.value());
             // }
