add mathquill 相关内容

--- a/keditor.html
+++ b/keditor.html
@@ -156,12 +156,12 @@
             ],
             stylesheets: [
                 "styles/mathjax.css"
-            ]
+            ],
 
-
-            // change: function () {
-            //     //    console.log(this.value());
-            // }
+        
+            change: function () {
+               console.log(this.value());
+            }
             // ,
             // pasteCleanup: {
             //     // none:true
