--- a/mathquill/quickstart.html
+++ b/mathquill/quickstart.html
@@ -36,7 +36,7 @@
 
     $("#sqrtbtn").click(function(){
   
-    mathField.write('\sqrt[]{}');
+    mathField.write('\\sqrt[]{}');
       
     })
     // you may pass in an options object:
