--- a/mathquill/quickstart.html
+++ b/mathquill/quickstart.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <p>Static math span: <span id="static-math">x = \frac{ -b \pm \sqrt{b^2-4ac} }{ 2a }</span></p>
+  <p id="static-math"><span></span> <span>\top</span></p>
   
   <p> \nthroot :<span id="sqrt">  \nthroot </span></p>
   <p>Editable math field: <span id="math-field">x^2</span></p>
