--- a/demos/mathboard.html
+++ b/demos/mathboard.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="../build/mathquill.css">
     <link href="../styles/kendo.common.min.css" rel="stylesheet" />
     <link href="../styles/kendo.default.min.css" rel="stylesheet" />
 
@@ -29,7 +30,7 @@
 #advance-editarea{ display: block; width: 100%; margin: 0 auto; height: 130px;}
 #advance-view{ margin: 0 auto; height: 130px; }
 
-#basic-editarea{ display: block; width: 100%; margin: 0 auto; height: 250px;}
+#basic-editarea{ clear: both; display: block; width: 100%; margin: 0 auto; height: 250px;}
 
 .blue-link{ margin: 5px 0; float: right; border: none; background: none; color: #3a9be5; cursor: pointer;}
 .blue-link:hover{ text-decoration: underline;}
@@ -39,6 +40,7 @@
     <script src="https://cdn.bootcss.com/jquery/1.12.2/jquery.js"></script>
     <script src="../js/kendo.all.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+    <script src="../build/mathquill.js"></script>
     <script src="../js/mathboard.js"></script>
     
 </body>
