--- a/demos/mathboard.html
+++ b/demos/mathboard.html
@@ -25,7 +25,7 @@
 #math-category>li{ display: inline-block; margin: 0 3px 0 0; padding: 0 5px; line-height: 30px; border: 1px solid #ccc; cursor: pointer;}
 .selected-category{ background: #e0e0e0 }
 
-#math-symbol>li{ display: inline-block; padding: 3px 5px; background: #e0e0e0; cursor: pointer;}
+#math-symbol>li{ display: inline-block; padding: 3px 5px;/*  background: #e0e0e0; */ cursor: pointer;}
 
 #advance-editarea{ display: block; width: 100%; margin: 0 auto; height: 130px;}
 #advance-view{ margin: 0 auto; height: 130px; }
@@ -34,6 +34,8 @@
 
 .blue-link{ margin: 5px 0; float: right; border: none; background: none; color: #3a9be5; cursor: pointer;}
 .blue-link:hover{ text-decoration: underline;}
+
+#math-symbol .mq-empty{ display: none!important; background: none!important; height: 0px!important; width: 0px!important;}
 
     </style>
 
