Added all Symbols.

--- a/demos/mathboard.html
+++ b/demos/mathboard.html
@@ -18,7 +18,7 @@
     </div>
 
     <style>
-        *{ font-family: 'Segoe UI'}
+        /**{ font-family: Symbola, "Times New Roman", serif;}*/
         ul{ list-style: none; }
 #kmath{ max-width: 700px; margin: 0 auto; padding: 8px; border: 1px solid #f1f1f1; }
 
