--- a/demos/kmath.html
+++ b/demos/kmath.html
@@ -9,9 +9,10 @@
     <link href="../styles/kendo.common.min.css" rel="stylesheet" />
     <link href="../styles/kendo.default.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="../styles/kmath.css">
+    <link rel="stylesheet" href="http://auifw.avepoint.net/dist/rp/css/auiframework.css">
 </head>
 <body>
-    <textarea id="editor" rows="10" cols="30" style="width:70%;height:400px"></textarea>
+    <textarea id="editor" rows="10" cols="30" style="width:50%;height:400px"></textarea>
 
     <script src="https://cdn.bootcss.com/jquery/1.12.2/jquery.js"></script>
     <script src="../js/kendo.all.min.js"></script>
