改变MathJax.css引用方式

--- a/demos/kmath.html
+++ b/demos/kmath.html
@@ -57,7 +57,7 @@
             "kmath"
         ],
         stylesheets: [
-            "../styles/mathjax.css"
+            // "../styles/mathjax.css"
         ],
     });
 
