--- a/demos/kmath.html
+++ b/demos/kmath.html
@@ -9,7 +9,7 @@
     <link href="../styles/kendo.common.min.css" rel="stylesheet" />
     <link href="../styles/kendo.default.min.css" rel="stylesheet" />
     <!--<link rel="stylesheet" href="../styles/kmath.css">-->
-    <link rel="stylesheet" href="//auifw.avepoint.net/dist/rp/css/auiframework.css">
+    <!--<link rel="stylesheet" href="//auifw.avepoint.net/dist/rp/css/auiframework.css">-->
 </head>
 <body>
     <textarea id="editor" rows="10" cols="30" style="width:50%;height:400px"></textarea>
