--- a/copy&drop/drop.html
+++ b/copy&drop/drop.html
@@ -5,15 +5,15 @@
 <head>
     <meta charset="utf-8" />
     <title>kendo</title>
-    <link href="styles/kendo.common.min.css" rel="stylesheet" />
-    <link href="styles/kendo.default.min.css" rel="stylesheet" />
+    <link href="../styles/kendo.common.min.css" rel="stylesheet" />
+    <link href="../styles/kendo.default.min.css" rel="stylesheet" />
     <link href="https://cdn.bootcss.com/bootstrap/3.0.0/css/bootstrap.css" rel="stylesheet">
     <!--<link type="text/css" rel="stylesheet" href="syntax/css/shCore.css" />
     <link type="text/css" rel="stylesheet" href="syntax/css/shThemeDefault.css" />
     <script src="syntax/js/syntaxhighligher.js" type="text/javascript"></script>-->
     <script src="https://cdn.bootcss.com/jquery/1.12.2/jquery.js"></script>
-    <script src="js/kendo.all.min.js"></script>
-    <script src="js/kmath.js"></script>
+    <script src="../js/kendo.all.min.js"></script>
+    <script src="../js/kmath.js"></script>
     <!--<script src="https://cdn.bootcss.com/angular.js/1.6.0/angular.js"></script>-->
 
 
@@ -115,7 +115,7 @@
            </textarea>
     </div>
 
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+
 
     <script>
         $("#editor").kendoEditor({
@@ -152,10 +152,10 @@
                 "fontSize",
                 "foreColor",
                 "backColor",
-                 "custom"
+                // "custom"
             ],
             stylesheets: [
-                "styles/mathjax.css"
+                "../styles/mathjax.css"
             ],
 
 
@@ -171,48 +171,24 @@
         });
 
         var editor = $('#editor').data("kendoEditor");
-        $(editor.body).on("paste", function (e) {
-            var clipboard = e.originalEvent.clipboardData;
-            clipboard.dropEffect = 'copy';
-            var data = clipboard.getData('Text');
-            if (clipboard && clipboard.items) {
-                var screenshot = clipboard.items[0];
+        $(editor.body).on('drop', function (e) {
+            e.preventDefault();
+            debugger;
+            var files = e.originalEvent.dataTransfer.files;
+            var reader = new FileReader();
+            reader.onload = function (event) {
+                var html = kendo.format('<img src="{0}"/>', event.target.result);
 
-                // if (screenshot.kind == "file") {
-                //     var blob = screenshot.getAsFile();
-
-                //     var reader = new FileReader();
-
-                //     reader.onload = function (event) {
-                //         var html = kendo.format('<img src="{0}"/>', event.target.result);
-
-                //         editor.paste(html);
-                //     };
-                //     reader.readAsDataURL(blob);
-                // }
-                screenshot.getAsString(function (s) {
-                    debugger;
-                    // ev.target.appendChild(document.getElementById(s)); 
-                });
+                editor.paste(html);
             }
-        });
+            reader.readAsDataURL(files[0]);
+            // reader.readAsDataURL(document.querySelector("input[type=file]").files[0]);
 
-        // MathJax.Hub.Config({
-        //     jax: ["input/TeX", "output/NativeMML"]
-        // });
-// MathJax.Hub.Config({
-//   "HTML-CSS": {
-//     preferredFont: "STIX"
-//   }
-// });     
-           MathJax.Hub.setRenderer("PlainSource");
-          // MathJax.Hub.setRenderer("NativeMML");
-          // MathJax.Hub.Queue(["Typeset", MathJax.Hub, document.body]);
-      //    MathJax.Hub.setRenderer("MML");
+        })
     </script>
     <!--<script type="text/javascript" async src="mathjax/MathJax.js?config=TeX-MML-AM_CHTML"></script>-->
 
-
+    <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
     <!--<script src="https://github.com/mathjax/MathJax/blob/master/MathJax.js?config=TeX-AMS_CHTML"></script>-->
 
 </body>
