重构目录结构，抽离 KMath

--- a/demos/kmath.window.html
+++ b/demos/kmath.window.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,13 +10,10 @@
     <link href="../styles/kendo.default.min.css" rel="stylesheet" />
 
 </head>
-
 <body>
     <!--<textarea id="editor" rows="10" cols="30" style="width: 60%;height:400px" >
     </textarea>-->
-    <div id="editor">
-
-    </div>
+  
     <div id="message"></div>
     <link rel="stylesheet" href="../styles/kmath.css">
     <script src="https://cdn.bootcss.com/jquery/1.12.2/jquery.js"></script>
@@ -25,12 +21,14 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
     <script src="../build/mathquill.js"></script>
     <script src="../js/mathboard.js"></script>
+    <script src="../js/math.window.extend.js"></script>
     <script>
-        var options = { $message: "#message", element: "#editor" };
-        var editor = new KMath(options);
-        editor._init();
+      
+       var options = { $message: "#kmath-message", isBasic: false },
+        mathEditor = new KMath(options);
+      var mathWindow=  mathEditor.init();
+      mathWindow.center().open();
     </script>
-
+    
 </body>
-
 </html>
