--- a/demos/kmath.html
+++ b/demos/kmath.html
@@ -18,7 +18,8 @@
     <script src="../js/kendo.all.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
     <script src="../build/mathquill.js"></script>
-    <script src="../js/kmathtool.js"></script>
+    <script src="../js/mathboard.js"></script>
+    <script src="../js/kmath.editor.extend.js"></script>
     <script>
     $("#editor").kendoEditor({
         tools: [
