--- a/demos/mathboard.html
+++ b/demos/mathboard.html
@@ -19,7 +19,7 @@
 
     </div>
     <div id="message"></div>
-    <link rel="stylesheet" href="../styles/kmath.css">
+    <!-- <link rel="stylesheet" href="../styles/kmath.css"> -->
     <script src="https://cdn.bootcss.com/jquery/1.12.2/jquery.js"></script>
     <script src="../js/kendo.all.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
