--- a/demos/kmath.window.html
+++ b/demos/kmath.window.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../build/mathquill.css">
     <link href="../styles/kendo.common.min.css" rel="stylesheet" />
     <link href="../styles/kendo.default.min.css" rel="stylesheet" />
+    <link href="../styles/kmath.css" rel="stylesheet" />
 
 </head>
 <body>
