添加font、copy LaTex。

--- a/demos/kmath.window.html
+++ b/demos/kmath.window.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../build/mathquill.css">
     <link href="../styles/kendo.common.min.css" rel="stylesheet" />
     <link href="../styles/kendo.default.min.css" rel="stylesheet" />
+     <link href="../styles/kmath.css" rel="stylesheet" /> 
 
 </head>
 <body>
@@ -20,6 +21,7 @@
     <!-- <link rel="stylesheet" href="../styles/kmath.css"> -->
     <script src="https://cdn.bootcss.com/jquery/1.12.2/jquery.js"></script>
     <script src="../js/kendo.all.min.js"></script>
+    <script src="../js/clipboard.min.js"></script> 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
     <script src="../build/mathquill.js"></script>
     <script src="../js/mathboard.js"></script>
