kendowindow固定宽度显示

--- a/demos/kmath.editor.html
+++ b/demos/kmath.editor.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../build/mathquill.css">
     <link href="../styles/kendo.common.min.css" rel="stylesheet" />
     <link href="../styles/kendo.default.min.css" rel="stylesheet" />
-    <!--<link rel="stylesheet" href="../styles/kmath.css">-->
+    <link rel="stylesheet" href="../styles/kmath.css">
     <!--<link rel="stylesheet" href="//auifw.avepoint.net/dist/rp/css/auiframework.css">-->
 </head>
 <body>
