--- a/demos/kmath.editor.html
+++ b/demos/kmath.editor.html
@@ -21,6 +21,7 @@
     <script src="../build/mathquill.js"></script>
     <script src="../js/mathboard.js"></script>
     <script src="../js/kmath.editor.extend.js"></script>
+    <script src="../js/math.window.extend.js"></script>
     <script>
     $("#editor").kendoEditor({
         tools: [
