--- a/demos/kmath.window.html
+++ b/demos/kmath.window.html
@@ -25,6 +25,10 @@
     <script src="../js/clipboard.min.js"></script> 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
     <script src="../build/mathquill.js"></script>
+
+    <script scr="http://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.js"></script>
+    <script src="../js/select.js"></script>
+
     <script src="../js/mathboard.js"></script>
     <script src="../js/math.window.extend.js"></script>
     <script src="../js/kmath.editor.extend.js"></script>
