--- a/demos/kmath.editor.html
+++ b/demos/kmath.editor.html
@@ -20,7 +20,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
     <script src="../build/mathquill.js"></script>
 
-    <script src="http://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.js"></script>
+    <script src="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.js"></script>
     <script src="../js/select.js"></script>
 
     <script src="../js/mathboard.js"></script>
