--- a/demos/kmath.window.html
+++ b/demos/kmath.window.html
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
     <script src="../build/mathquill.js"></script>
 
-    <script scr="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.js"></script>
+    <script src="../js/jquery-ui.js"></script>
     <script src="../js/select.js"></script>
 
     <script src="../js/mathboard.js"></script>
