--- a/demos/kmath.editor.html
+++ b/demos/kmath.editor.html
@@ -64,7 +64,7 @@
             "kmath"
         ],
         stylesheets: [
-            // "../styles/mathjax.css"
+            "../styles/kmath.css"
         ],
     });
 
