--- a/demos/kmath.window.html
+++ b/demos/kmath.window.html
@@ -47,10 +47,16 @@
             tools: [
                 "kmath"
             ],
+            stylesheets: [
+                "../styles/kmath.css"
+            ],
         });
         $("#editor2").kendoEditor({
             tools: [
                 "kmath"
+            ],
+            stylesheets: [
+                "../styles/kmath.css"
             ],
         });
 
